--- a/birthday.html
+++ b/birthday.html
@@ -12,10 +12,9 @@
   <h1 id="birthday-banner">🎉 Happy Birthday Neeti 🎉</h1>
 
   <div id="cake-section" class="hidden">
-    <div class="cake-wrapper">
-       <img src="assets/cake.png" id="cake" alt="Cake">
-       <img src="assets/knife.png" id="knife" alt="Knife">
-    </div>
+    <img src="assets/cake.png" id="cake-image" alt="Cake">
+    <button id="cut-button">PRESS TO CUT THE CAKE 🍰</button>
+  </div>
     <button id="cut-button">PRESS TO CUT THE CAKE 🍰</button>
     <div id="slice" class="hidden">🍰</div>
   </div>
